--- a/extensions/datasource1.env
+++ b/extensions/datasource1.env
@@ -7,6 +7,5 @@ DS1_MAX_POOL_SIZE=20
 DS1_MIN_POOL_SIZE=10
 DS1_CONNECTION_CHECKER=org.jboss.jca.adapters.jdbc.extensions.mysql.MySQLValidConnectionChecker
 DS1_EXCEPTION_SORTER=org.jboss.jca.adapters.jdbc.extensions.mysql.MySQLExceptionSorter
-DS1_URL: jdbc:mariadb://mariadb.eap-demo.svc.cluster.local:3306/test
-DS1_NONXA: "true"
-
+DS1_URL=jdbc:mariadb://mariadb.eap-demo.svc.cluster.local:3306/test
+DS1_NONXA="true"
