--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>steve</groupId>
-  <artifactId>demo</artifactId>
+  <artifactId>hello</artifactId>
   <version>0.1</version>
   <packaging>war</packaging>
 
@@ -27,7 +27,7 @@
   </dependencies>
 
   <build>
-    <finalName>demo</finalName>
+    <finalName>hello</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
